- Finally fixed the warpcircle and charvanish! The mentioned commands in Rev 62-63 now work as announced
- UDP_ID and all related stuff moved to connection_udp. Will be more controlled in the future from there

====================
Namikon; 26.12.2006 22:33 GMT+1
----------
[rev. 66]
<internal version: 0.1.14 Dev>

- Added, by Stings request, serveranswer to worldroute query: "Where is the Primary App" works now.
- "Fixed" SQL function GetAptLocID(). Now only decreases the location value if the given AppartmentID is higher than 100000

====================
Namikon; 27.12.2006 19:05 GMT+1
----------
[rev. 67]
<internal version: 0.1.15 Dev>

Small update
- Added 2 error messages for genrep activation. (Wrong faction and MC5 "broken")

====================
Namikon; 28.12.2006 18:45 GMT+1
----------
[rev. 68]
<internal version: 0.1.16 Dev>

- 2 new ingame commands:
 @givemoney <amount> [<charID or nick>]
 @takemoney <amount> [<charID or nick>]
 I dont think i have to explain what they do :)

- Added universal udpmessage to trigger messages from text.ini

====================
Namikon; 28.12.2006 20:02 GMT+1
----------
[rev. 69]
<internal version: 0.1.16H Dev>

Internal Release / "Hotfix"
The udpmanager was planned to cancel OOO notices, but he causes an segfault when trying to send the message.
Its not clear yet why, therefore, the OOO handling got disabled. It will be re-enabled when this is fixed.

====================
Namikon; 30.12.2006 08:11 GMT+1
----------
[rev. 70]
<internal version: 0.1.17 Dev>

- Added "life" to hackbuttons and entrance-fee buttons. (Level GM and higher can just "use" hackbuttons, lower levels
	must hack it. For entrance fee buttons, everyone must pay. Why? Well, for what is the @givemoney command ^.^)
	Since hacking is not working yet, (we have to add item-usage first) make sure to set your own level to 50+, or you
	wont get these doors open)
- Disabled some debug outputs forgotten in the last release